src/app/main-content/contact/contact.component.scss
@import "./../../../styles.scss";
@import "./../../../scss/layers.scss";
@import "./../../../scss/mixin.scss";
@import "./../../../scss/media.scss";

$form-gap: 20px;

section {
  margin-top: 100px;
  @include fontH(
    $font_size: $f_body_8,
    $font_weight: $f_w_small,
    $f_media: $f_body_8
  );
  @include gridCandRows(auto auto);

  .container_write_to {
    @include padding();
    @include layers(1);
  }
}

.grid-wrapper {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 10px;
  position: relative;
}
.container_img_shadows {
  @include layers(0);
  img {
    height: 747px;
    width: 902px;
    left: -312px;
  }
}

header {
  scroll-margin-top: 5rem;

  display: flex;
  align-items: center;
  gap: 10px;
  .line {
    @include line($backc: $purple);
    max-width: 500px;
    max-width: 40%;
    grid-area: head;
  }
  span {
    @include fontH($f_media_small: $f_body_2);
    grid-area: head;
  }
}

.required {
  color: $red;
  display: flex;
  justify-content: center;

  // opacity: 0;
  // transition: opacity 0.3s;
}

.check {
  display: flex;
  gap: 10px;
}

.invisible {
  min-height: 30px;
}

.write_to {
  display: flex;
  .text {
    width: 100%;
    grid-area: text;
    h3 {
      @include fontH($font_size: $f_body_2, $f_media: $f_body_5);
    }
  }
  .container_input {
    width: 100%;
    grid-area: input;
  }
}

.input {
  width: 100%;
  form {
    display: flex;
    flex-direction: column;
  }
}

.input_box {
  @include CustomBtn($border_c: $purple, $padding: 10px 15px);
  // position: relative;
  display: flex;
  align-items: center;
  // width: 300px;
  // border: 10px;
  border-radius: 10px;
  border-style: solid;
}

input[type="text"],
input[type="email"],
select,
textarea {
  @include CustomBtn($backc: $blue, $border_c: $purple, $padding: 10px 15px);
  color: $white;
  box-sizing: border-box;
  // margin-top: 6px;
  // margin-bottom: 16px;
  resize: none;
  overflow: hidden;
  max-width: 617px;
  min-width: 100px;
  outline: none;
  padding: 10px;
  width: 100%;
  border: none;
}

.img_required {
  // position: absolute;
  right: 10px;
  top: 40%;
  // transform: translateY(-50%);

  border: none;
  border-radius: 50%;
}

input[type="text"]::placeholder,
input[type="email"]::placeholder,
select::placeholder,
textarea::placeholder {
  color: $white;
  opacity: 1;
}

.input_box:hover

// input[type="text"]:hover,
// input[type="email"]:hover,
// textarea:hover
{
  @include CustomBtn($backc: $blue, $border_c: $green, $padding: 10px 15px);
}

// input[type="text"]:focus,
// input[type="email"]:focus,
// textarea:focus
.input_box:focus {
  @include CustomBtn($backc: $blue, $border_c: $green, $padding: 10px 15px);
}

input[type="submit"] {
  color: white;
  @include CustomBtn($backc: $grey, $border_c: $grey, $padding: 10px 15px);
  border: none !important;
  cursor: pointer;
  width: auto;
  @include fontH(
    $font_size: $f_body_5,
    $font_weight: $f_w_small,
    $f_media: $f_body_3
  );
}

input[type="submit"]:hover {
  @include CustomBtn($backc: $purple, $border_c: $purple, $padding: 10px 15px);
}

.privacy-policy {
  color: $purple;
}

input[type="checkbox"] {
  appearance: none;
  -webkit-appearance: none;
  background-color: $blue;
  border: 2px solid $green;
  height: 24px;
  width: 24px;
  cursor: pointer;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

input[type="checkbox"]::after {
  content: "✓";
  display: block;
  width: 16px;
  height: 16px;
  font-size: 14px;
  color: $green;
  position: absolute;
  opacity: 0;
  transition: opacity 0.2s ease;
}

input[type="checkbox"]:checked::after {
  opacity: 1;
}

.fill_1out_hint {
  color: $red;
}

.form_butten {
  @include dFlex($g: $form-gap);
  margin-top: 16px;
}

.form_butten :hover {
  background-color: $purple;
  transform: scale(1.3);
}

.policy {
  @include fontH(
    $font_size: $f_body_9,
    $font_weight: $f_w_small,
    $f_media: $f_body_9
  );
  p {
    @include fontH(
      $font_size: $f_body_9,
      $font_weight: $f_w_small,
      $f_media: $f_body_9
    );
  }
}

a:hover {
  text-decoration: underline;
}

.contact_text {
  width: 300px;
}

.container_box {
  display: flex;
  gap: 8px;
}

.container_arrow {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  margin: 32px 0;
  .arrow {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 39px;
    height: 39px;
    border-radius: 50%;
    border: 2px solid $white;
    div {
      width: 24px;
      height: 24px;
    }
  }
}

a {
  text-decoration: none;
}
.hover-img {
  content: url("/assets/icons/go_up_butten_default.svg");
}

.hover-img {
  content: url("/assets/icons/go_up_butten_hover.svg");
}

@media (max-width: 600px) {
  .write_to {
    flex-direction: column;
    grid-template-areas:
      "head"
      "text"
      "input";
  }
}

@media (max-width: 380px) {
  .container_img_shadows {
    left: -500px;
    top: -300px;
  }
}

@media (min-width: 320px) {
  .container_img_shadows {
    left: -600px;
  }
}

